--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,6 @@
 [submodule "kbk-frontend"]
 	path = kbk-frontend
 	url = git@github.com:ZQCard/kbk-frontend.git
+[submodule "kbk-user"]
+	path = kbk-user
+	url = https://github.com/ZQCard/kbk-user.git
